--- a/client/src/components/NoMatch/NoMatch.scss
+++ b/client/src/components/NoMatch/NoMatch.scss
@@ -15,8 +15,7 @@
       padding: 15px;
       border: none;
       outline: none;
-      background: #00796b;
-      color: white;
+      background: none;
       border-radius: 5px;
       text-decoration: none;
     }
