--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,8 +1,8 @@
 .green {
-  background: #00796b !important;
+  background: #861f41 !important;
   color: #fff !important;
   font-weight: 500 !important;
   &:hover {
-    background: #00685c !important;
+    background: #75787b !important;
   }
 }
