--- a/client/src/components/UI/Header/Header.scss
+++ b/client/src/components/UI/Header/Header.scss
@@ -12,9 +12,11 @@
       width: 100%;
     }
     .help-text {
-      font-size: 22px;
+      font-size: 30px;
       padding-left: 4px;
-      color: #5f6368;
+      color: #861f41;
+      font-weight: 800;
+      font-family: "Poppins", sans-serif;
     }
   }
   .action-btn {
