--- a/client/src/components/UI/MeetingInfo/MeetingInfo.scss
+++ b/client/src/components/UI/MeetingInfo/MeetingInfo.scss
@@ -25,7 +25,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #04796a;
+    background: #861f41;
     color: #fff;
     font-size: 16px;
     padding: 10px;
