--- a/client/src/components/HomePage/HomePage.scss
+++ b/client/src/components/HomePage/HomePage.scss
@@ -35,7 +35,7 @@
             outline: none;
             background: none;
             border-radius: 5px;
-            color: #00796b;
+            color: #861f41;
             text-decoration: none;
             .icon-block {
               padding-right: 10px;
@@ -77,7 +77,7 @@
         border-top: 1px solid #ddd;
         a {
           text-decoration: none;
-          color: #00796b;
+          color: #861f41;
         }
       }
     }
