--- a/client/src/components/UI/Alert/Alert.scss
+++ b/client/src/components/UI/Alert/Alert.scss
@@ -11,7 +11,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 5px;
-    color: #04796a;
+    color: #861f41;
     .icon {
       margin-right: 10px;
     }
