--- a/client/src/components/UI/Messenger/Messenger.scss
+++ b/client/src/components/UI/Messenger/Messenger.scss
@@ -38,8 +38,8 @@
         margin-left: 10px;
       }
       &.active {
-        border-bottom: 2px solid #04796a;
-        color: #04796a;
+        border-bottom: 2px solid #861f41;
+        color: #861f41;
       }
       &:hover {
         cursor: pointer;
@@ -87,7 +87,7 @@
     .icon {
       cursor: pointer;
       &:hover {
-        color: #04796a;
+        color: #861f41;
       }
     }
   }
